# yahoo-finance-scraper

./: -yahoo-finance-web-scraper.ipynb  .jovianrc  LICENSE  README.md  chrome_headless_lambda_layer.sh  crypto-currencies.csv  cryptocurrencies.csv  earnings_2022-02-24.csv  earnings_2022-02-28.csv  earnings_filter_by_region.ipynb  economic_2022-02-24.csv  economic_2022-02-28.csv  economic_2022-03-18.csv  ipo_2022-02-28.csv  json-scrap-yahoo-finance-market-calendar.ipynb  lambda_function.py  my_json_file.json  pyproject.toml  scraper.py  scratch.py  selenium-scrape-yahoo-finance-trending-tickers.ipynb  splits_2022-02-24.csv  splits_2022-02-28.csv  splits_2022-03-18.csv  stock-market-news.csv  tag-scrape-yahoo-finance-news.ipynb  trending-tickers.csv  trending-tickers.html  trending.csv  yahoo-finance-scraper.ipynb  yahoo-finance-web-scraper.ipynb  yahooscraper.py
